--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <h1>Welcome to MY Portfolio</h1>
+        <h1>Welcome to Erin's Portfolio</h1>
 
         <h2>About Me</h2>
 
